--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.appland</groupId>
+            <artifactId>appmap-agent</artifactId>
+            <version>1.9.0</version> <!-- versione di esempio -->
+            <scope>test</scope>
+        </dependency>
+
         <!-- Gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
